# agentic-log

./: .env.example  .gitignore  DATABASE_RECOVERY.md  Dockerfile  ENVIRONMENT_SETUP.md  PHASE_10_POLICY_B_IMPLEMENTATION.md  PHASE_2_RETRIEVAL_RESULTS.md  PHASE_3A_RESULTS.md  PHASE_3_SUMMARY.md  PHASE_4_CONFIDENCE_CALIBRATION.md  PHASE_5_HYPOTHESIS_EVAL_RESULTS.md  PHASE_6A_CONFIDENCE_PROPAGATION_RESULTS.md  PHASE_7_HYPOTHESIS_STRUCTURE_ANALYSIS.md  PHASE_7_KEYWORD_GENERATION_RESULTS.md  PHASE_8B_HYPOTHESIS_DEPTH_ANALYSIS.md  PHASE_8_GENERIC_HYPOTHESIS_ROOT_CAUSE_ANALYSIS.md  PHASE_9_HYPOTHESIS_POLICY_EVALUATION.md  README.md  RETRIEVAL_V2.5_PLAN.md  RETRIEVAL_V2_SUMMARY.md  VALIDATION_KEYWORD_FAILURE_ANALYSIS.md  alembic.ini  cleanup_report.md  docker-compose.yml  pyproject.toml  transaction_state_analysis.md
.benchmarks/phase17c/: bm25.json  dense.json  hybrid.json  overlap_report.json
.benchmarks/phase17d/: a.json  b.json  baseline.json  c.json  d.json  e.json  regressions_summary.json
.benchmarks/phase18d/: confidence_records.json  (+4 more)
alembic/: env.py
app/: main.py
docs/: README.md
scripts/: backfill_canonical_text.py  corpus_analysis.py  eval_jira_impact.py  eval_retrieval_behavior.py  fetch_incidents.py  hyp05_cosine_audit.py  hypothesis_structure_analysis.py  inspect_evaluation_run.py  keyword_recall_compare.py  keyword_strategy_eval.py  load_test.py  neither_hypothesis_analysis.py  probe_collector.py  probe_strategies.py  profile_performance.py  run_full_evaluation.py  run_phase17c_benchmark.py  run_phase17d_benchmark.py  run_phase18d_benchmark.py
(+205 files in other folders)
