[project]
name = "enterprise-incident-intelligence-platform"
version = "0.1.0"
description = "Phase 1 GitHub incident ingestion and semantic search platform."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.57.0",
    "pgvector>=0.3.2",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sentence-transformers>=3.0.1",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2,<9",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
